--- a/src/apps/ping-pong/test_copy.cfg
+++ b/src/apps/ping-pong/test_copy.cfg
@@ -1,3 +1,3 @@
-puts "Filtering device 0671FF535149756687081736"
-hla_serial 0671FF535149756687081736 # Newi2
+puts "Filtering device 2"
+# hla_serial 0671FF535149756687081736 # Newi2
 # hla_serial 066BFF565653756687161833
