Feature rlnc decoder (#44)
* Lay out structure for GF RLNC decoding

* Add overkill and failing Galois Field library as reference

* Optimize Galois Field library by removing iostream and removing oversized LUTs

* Fix proto ouput path as C# solution has changed

* Reorganize with GF in rlnc decoder

* Add LoRa RLNC messages

* Rename fieldSize to fieldDegree to avoid confusion

* Start on RLNC control plane

* Implement LFSR and prepare C++ RLNC decoder

* Finalize LFSR with generateMany and proper constructor

* Verify the LFSR to be compared with C# unit tests

* Classify the RLNC decoder

* Fill in layed out structure for decoder

* Add debug flag to dump UART payloads into LoRa RX handler

* Implement matrix solving functions and rank determination

* Add debugging statements for UART etc

* Share decoder statically

* Add ability to progress encoded fragments

* Fix tiny bad access when pivot is NULL

* Mark error and debugging info

* Fix bug augmentation vector using RlncFrame

Add exception debugging, HARD Fault handler, reshape proto

* UART lora payload giving issues

* Add ability to debug decoding result

--- a/src/peripherals/CMakeLists.txt
+++ b/src/peripherals/CMakeLists.txt
@@ -45,6 +45,10 @@ else()
     message(STATUS "Did not add ZED tsl2561 I2C peripheral (C++)")
 endif()
 
+file (GLOB GALOIS_LIB "decoding/*.cpp")
+list(APPEND ${PROJECT_NAME}_SOURCES ${GALOIS_LIB})
+message(STATUS "Added A. Partow Galois FF arithmetic (C++)")
+list(APPEND ${PROJECT_NAME}_SOURCES "placeholder.cpp")
 
 add_library(${PROJECT_NAME} OBJECT EXCLUDE_FROM_ALL ${${PROJECT_NAME}_SOURCES})
 
@@ -61,6 +65,7 @@ if(BME_68X)
     target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/bme68x)    
 endif()
 
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/decoding)
 
 target_include_directories( ${PROJECT_NAME} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
