Rewrite flash storage to one-to-one storage for differently functionality using a handle class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -166,7 +166,8 @@
         "typeinfo": "cpp",
         "iomanip": "cpp",
         "crc8.h": "c",
-        "eeprom-conf.h": "c"
+        "eeprom-conf.h": "c",
+        "stdint.h": "c"
     },
     "favorites.resources": [
         "src\\boards\\NucleoF446\\CMakeLists.txt",
