Add sx1672 shield and compile correctly

--- a/src/boards/NucleoF446/CMakeLists.txt
+++ b/src/boards/NucleoF446/CMakeLists.txt
@@ -61,7 +61,9 @@ list(APPEND ${PROJECT_NAME}_SOURCES
     # "${CMAKE_CURRENT_SOURCE_DIR}/../stm32/EEPROM_Emul/Porting/STM32F4/flash_interface.c"
 )
 
-if(MBED_RADIO_SHIELD STREQUAL SX1261MBXBAS)
+if(MBED_RADIO_SHIELD STREQUAL SX1272MB2DAS)
+    list(APPEND ${PROJECT_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/sx1272mb2das-board.c")
+elseif(MBED_RADIO_SHIELD STREQUAL SX1261MBXBAS)
     list(APPEND ${PROJECT_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/sx1261mbxbas-board.c")
 else()
     message(STATUS " Please specify the MBED_RADIO_SHIELD !\nPossible values are: SX1261MBXBAS.")
